Graph rework finished, ready for testing hell